# CopyMaster

./: Cargo.toml  Makefile  README.md  Readme.md
data/: CopyMaster.desktop  copymaster.gresource.xml  style.css
scripts/: build-appimage.sh  configure-conflicts.sh  create-release.sh  generate-icons.sh  install.sh  setup-devenv.sh  uninstall.sh
src/: cli.rs  main.rs
src/cli/: mod.rs  style.rs
src/core/: autostart.rs  config.rs  copy_engine.rs  daemon.rs  device_detector.rs  device_queue.rs  drag_drop.rs  error_recovery.rs  local_engine.rs  mod.rs  optimizer.rs  queue_manager.rs  transfer_manager.rs
src/core/extensions/: mod.rs
src/ui/: conflict_dialog.rs  devices_panel.rs  drag_drop.rs  drop_dialog.rs  main_window.rs  mod.rs  queue_panel.rs  settings_dialog.rs  style.rs  tray_icon.rs
